<resources>
    <string name="app_name">Form</string>
    <string name="Exit">Back</string>
    <string name="SignIn">Sign In</string>
    <string name="Email">Email</string>
    <string name="Terms">I agree to the Terms of Service and Privacy</string>
    <string name="Nickname">User Name</string>
    <string name="FullName">Full Name</string>
    <string name="Password">Password</string>
    <string name="Select01">Select your main device</string>
    <string name="GetStarted">Get Started</string>
    <string name="Website">What the of website do you need?</string>
    <string name="Required">* Required</string>
</resources>