<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="66dp"
    tools:layout_editor_absoluteY="1dp">


    <Button
        android:id="@+id/bExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/Exit"
        android:background="@drawable/custom_button"
        app:icon="@drawable/ic_arrow_down_left"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.564"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bsignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/SignIn"
        android:background="@drawable/custom_button"
        app:icon="@drawable/ic_arrow_up_right"
        app:iconGravity="textEnd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@+id/guideline2" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="284dp"
        android:layout_height="43dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/Email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="76dp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="288dp"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/Password"
        app:layout_constraintEnd_toEndOf="@+id/etEmail"
        app:layout_constraintStart_toStartOf="@+id/etEmail"
        tools:layout_editor_absoluteY="143dp" />

    <EditText
        android:id="@+id/etNick"
        android:layout_width="100dp"
        android:layout_height="38dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/Nickname"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.039"
        app:layout_constraintStart_toStartOf="@+id/etPassword"
        tools:layout_editor_absoluteY="215dp" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="120dp"
        android:layout_height="44dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/FullName"
        app:layout_constraintEnd_toEndOf="@+id/etPassword"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        tools:layout_editor_absoluteY="209dp" />

    <CheckBox
        android:id="@+id/terms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:text="@string/Terms"
        app:layout_constraintBottom_toTopOf="@+id/bExit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <RadioButton
        android:id="@+id/rbAndroid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:drawableEnd="@drawable/ic_mobile_android"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        tools:layout_editor_absoluteY="348dp" />

    <RadioButton
        android:id="@+id/rbLaptop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_laptop"
        app:layout_constraintEnd_toStartOf="@+id/rbAndroid"
        app:layout_constraintHorizontal_bias="0.67"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="348dp" />

    <RadioButton
        android:id="@+id/radioButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="52dp"
        android:drawableEnd="@drawable/ic_tablet"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="348dp" />

    <RadioButton
        android:id="@+id/pc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_desktop"
        app:layout_constraintEnd_toStartOf="@+id/radioButton3"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        tools:layout_editor_absoluteY="348dp" />

    <TextView
        android:id="@+id/tvDivice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Select01"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etNick"
        tools:layout_editor_absoluteY="297dp" />

    <TextView
        android:id="@+id/tvWellcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/GetStarted"
        android:textColor="@color/dark_blue"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/etEmail"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.703"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.931" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/Website"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.227"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <CheckBox
        android:id="@+id/cbBugs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_bug"
        app:layout_constraintEnd_toStartOf="@+id/cbPrgraming"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        tools:layout_editor_absoluteY="504dp" />

    <CheckBox
        android:id="@+id/cbPrgraming"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_brackets_curly"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        tools:layout_editor_absoluteY="504dp" />

    <CheckBox
        android:id="@+id/cbServer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_server_connection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.537"
        app:layout_constraintStart_toEndOf="@+id/cbPrgraming"
        tools:layout_editor_absoluteY="506dp" />

</androidx.constraintlayout.widget.ConstraintLayout>